--- a/text2.html
+++ b/text2.html
@@ -8,7 +8,7 @@
 
 <h2 style="text-align:center">
 <div style="text-align:center">
-<img src="IMG_0712.jpeg" width=1600px height=1300px>
+<img src="無題374_20240624085336.jpeg" width=1600px height=1300px>
 </div>
 <div class="container">
 <img src="goods520.jpeg">
