--- a/text2.html
+++ b/text2.html
@@ -11,7 +11,7 @@
 <img src="無題374_20240624085336.jpeg" width=1600px height=1300px>
 </div>
 <div class="container">
-<img src="goods520.jpeg">
+<img src="無題374_20240624085336.jpeg">
 <p> </p>
 </div>
 <br><br><br><br>
