--- a/text2.html
+++ b/text2.html
@@ -8,7 +8,7 @@
 
 <h2 style="text-align:center">
 <div style="text-align:center">
-<img src="無題414_20240811094032.jpeg" width=1600px height=1200px>
+<img src="IMG_2647.jpeg" width=1600px height=1200px>
 </div>
 <div class="container">
 <img src="無題414_20240811094332.jpeg">
@@ -51,7 +51,7 @@
 <b>
 <a class="time">
 <div style="font-size: 85px;">
-2024/8/11
+2024/11/25
 <span id="real-time">
   <script type="text/javascript">
 function Time() {
