--- a/text2.html
+++ b/text2.html
@@ -11,7 +11,7 @@
 <img src="IMG_2647.jpeg" width=1600px height=1200px>
 </div>
 <div class="container">
-<img src="無題414_20240811094332.jpeg">
+<img src="IMG_2648.jpeg">
 <p> </p>
 </div>
 <br><br><br><br>
